--- a/app/src/main/res/layout/activity_game_playing.xml
+++ b/app/src/main/res/layout/activity_game_playing.xml
@@ -27,17 +27,17 @@
         android:id="@+id/game_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/game_start_description"
-        app:layout_constraintBottom_toTopOf="@id/start_game_button"
+        android:text="@string/game_playing_description"
+        app:layout_constraintBottom_toTopOf="@id/end_game_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/start_game_button"
+        android:id="@+id/end_game_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/game_start_button"
+        android:text="@string/game_playing_end_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
