--- a/app/src/main/res/layout/activity_game_playing.xml
+++ b/app/src/main/res/layout/activity_game_playing.xml
@@ -7,6 +7,7 @@
     tools:context=".ui.game.start.GameStartActivity">
 
     <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/Theme.Plumia.AppBarOverlay"
@@ -22,6 +23,14 @@
             app:popupTheme="@style/Theme.Plumia.PopupOverlay" />
 
     </com.google.android.material.appbar.AppBarLayout>
+
+    <androidx.appcompat.widget.LinearLayoutCompat
+        app:layout_constraintTop_toBottomOf="@id/appbar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="16dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/game_description"
